--- a/Intro_to_R.Rmd
+++ b/Intro_to_R.Rmd
@@ -24,23 +24,34 @@ output: html_notebook
 
 
 ```{r}
-# install.packages(c("tidyverse", "reshape2"))
+install.packages(c("tidyverse", "reshape2", "rmarkdown", "magrittr"))
 ```
 
 ```{r}
 library(tidyverse)  
 library(reshape2)
+library(magrittr)
 ```
+
 
 
 # Variables
+You can take notes here.
 
 ```{r}
 # Signle Values
+# this is a comment
 x <- 42  
-y <- "forty two"
+y <- "forty two"  # comment
 z <- TRUE
 ```
+
+
+```{r}
+x + 5
+y + "something"
+```
+
 
 ```{r}
 # Arrays / Vectors
@@ -65,11 +76,16 @@ a[2:4]
 ```
 
 ```{r}
+c
 c[c(1,3,5)]
 ```
 
 
 # Fun with functions!
+
+```{r}
+a[1] + a[2]
+```
 
 ```{r}
 # Sum
@@ -117,6 +133,13 @@ summary(a)
 ```
 
 
+```{r}
+5 -> d
+```
+
+```{r}
+e = 5
+```
 
 
 ```{r}
@@ -127,14 +150,37 @@ add_two <- function(x) {
 ```
 
 ```{r}
+add_three_and_two <- function(x) {
+  x <- x+3
+  x <- x+2
+  return(x)
+}
+```
+
+```{r}
+add_x_and_y <- function(x, y) {
+  x + y
+}
+```
+
+```{r}
+add_x_and_y(88,4)
+```
+
+
+```{r}
 add_two(x)
+add_three_and_two(x)
+```
+
+```{r}
+a
+add_two(a)
+add_three_and_two(a)
 ```
 
 ```{r}
 add_two(a)
-```
-
-```{r}
 mean(add_two(a))
 ```
 
@@ -190,6 +236,11 @@ df <- data_frame(
 ```
 
 ```{r}
+df
+```
+
+
+```{r}
 ## Load dataframe from a spreadsheet
 demo.donors <- read_csv("data/demo_donors.csv")
 demo.transactions <- read_csv("data/demo_transactions.csv")
@@ -202,6 +253,7 @@ df
 
 ```{r}
 View(df)
+df %>% View
 ```
 
 ```{r}
@@ -248,6 +300,11 @@ df[,1]
 ```
 
 ```{r}
+df
+```
+
+
+```{r}
 df$Letters
 ```
 
@@ -261,20 +318,35 @@ df$Booleans %>% is.na
 df$Booleans %>% is.na %>% sum
 ```
 
+```{r}
+
+```
 
 # Working with the demo data
+
+```{r, rows.print=20}
+demo.donors
+```
+
+
 
 ## Filtering
 
 ```{r}
-demo.donors %>%
+seatle.donors <- demo.donors %>%
   filter(CITY == "SEATTLE")
 ```
 
 ```{r}
-demo.donors %>%
-  filter(CITY %in% c("FEDERAL WAY", "AUBURN"))
+filter(demo.donors, CITY"SEATTLE")
 ```
+
+
+```{r}
+demo.donors %>%
+  filter(CITY %in% c("FEDERAL WAY", "AUBURN", "KENT"))
+```
+
 
 ## Pivot Tables
 ```{r}
@@ -285,7 +357,9 @@ demo.donors %>%
 ```{r}
 demo.donors %>%
   dcast(CITY ~ .) %>%
-  arrange(desc(.))
+  set_colnames(c("CITY", "COUNT")) %>%
+  arrange(desc(COUNT))
+  
 ```
 
 
@@ -296,12 +370,14 @@ demo.donors %>%
 ```{r}
 # Take a look at demo.transactions data frame
 demo.transactions
+demo.donors
 ```
 
 
+
 ```{r}
-demo.transactions %>% 
-  left_join(demo.donors, by="CONS_ID")
+
+demo.transactions %>% left_join(demo.donors, by="CONS_ID")
 ```
 
 
@@ -309,11 +385,21 @@ demo.transactions %>%
 
 
 ```{r}
-demo.transactions %>% 
+demo.total <- demo.transactions %>% 
   left_join(demo.donors, by="CONS_ID") %>%
-  dcast(CITY ~ ., value.var = c("GIFT_AMOUNT"), fun.aggregate = sum) 
-  # set_colnames(c("CITY", "GIFT_AMOUNT")) %>%
-  # arrange(desc(GIFT_AMOUNT))
+  dcast(CITY ~ ., value.var = c("GIFT_AMOUNT"), fun.aggregate = sum) %>%
+  set_colnames(c("CITY", "GIFT_TOTAL")) 
+
+demo.avg <- demo.transactions %>% 
+      left_join(demo.donors, by="CONS_ID") %>%
+      dcast(CITY ~ ., value.var = c("GIFT_AMOUNT"), fun.aggregate = mean) %>%
+      set_colnames(c("CITY", "GIFT_AVG")) 
+
+demo.total %>%  
+  left_join(demo.avg, by="CITY") %>%
+  arrange(desc(GIFT_AVG))
+
+
 ```
 
 
@@ -322,10 +408,10 @@ demo.transactions %>%
 ```{r}
 demo.transactions %>% 
   left_join(demo.donors, by="CONS_ID") %>%
-  dcast(CITY ~ ., value.var = c("GIFT_AMOUNT"), fun.aggregate = sum) %>%
+  dcast(CITY ~ ., value.var = c("GIFT_AMOUNT"), fun.aggregate = mean) %>%
   set_colnames(c("CITY", "GIFT_AMOUNT")) %>%
   arrange(desc(GIFT_AMOUNT)) %>%
-  # filter(CITY %in% c("FEDERAL WAY", "AUBURN")) %>%
+  filter(CITY %in% c("FEDERAL WAY", "AUBURN", "KENT")) %>%
   ggplot(aes(x=CITY, y=GIFT_AMOUNT)) + 
     geom_col()
 ```
@@ -334,9 +420,12 @@ demo.transactions %>%
 
 ```{r}
 demo.transactions %>% 
-  ggplot(aes(GIFT_AMOUNT)) +
-    geom_histogram() #+ 
-      # facet_wrap(~ CAMPAIGN_NAME)
+  left_join(demo.donors, by="CONS_ID") %>%
+  filter(CITY %in% c("SEATTLE", "RENTON", "BELLEVUE")) %>%
+  ggplot(aes(x=GIFT_AMOUNT)) +
+    geom_histogram() + 
+      facet_wrap(~ CITY) 
+  
 ```
 
 
